--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -8,3 +8,14 @@
 body {
     font-family: jakartaSans
 }
+
+#header h1 {
+    font-size:64px;
+    text-align:center;
+}
+
+#header {
+    background:silver;
+    border-radius: 12px;
+    padding:10px;
+}
