--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -6,7 +6,9 @@
 
 
 body {
-    font-family: jakartaSans
+    font-family: jakartaSans;
+    padding-left:60px;
+    padding-right:60px;
 }
 
 #header h1 {
@@ -18,4 +20,5 @@ body {
     background:silver;
     border-radius: 12px;
     padding:10px;
+    margin:10px;
 }
