--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -41,3 +41,21 @@ body {
     width:500px;
     text-align:center;
 }
+
+button {
+    font-size:25px;
+    background:#1ED760;
+    border:2px solid black;
+    border-radius:30px;
+    padding:10px;
+    transition: box-shadow 0.1s ease-in-out;
+    transition: background 0.1s ease-in-out;
+
+
+}
+
+button:hover {
+    cursor: pointer;
+    box-shadow: 0px 2px 5px black;
+    background:lightgreen;
+}
