--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -59,3 +59,8 @@ body {
     box-shadow: 0px 2px 5px black;
     background:lightgreen;
 }
+
+#connectspot:active {
+    background:green;
+    margin-top:2px;
+}
