--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -40,36 +40,71 @@ body {
 	height: 375px;
 }
 
-#snappic {
+#snappicButton {
     background:silver;
     border:1px solid black;
     width:500px;
     text-align:center;
 }
 
-#connectspot {
-    font-size:25px;
-    background:#1ED760;
-    border:2px solid black;
+
+.roundButton {
     border-radius:30px;
     padding:10px;
+    font-size:25px;
+    transition: box-shadow 0.1s ease-in-out;
+    transition: background 0.1s ease-in-out;
+    border:2px solid black;
+
+}
+
+.roundButton:hover {
+    cursor: pointer;
+    box-shadow: 0px 2px 5px black;
+}
+
+
+
+
+#connectspotButton {
+
+    background:#1ED760;
+
     transition: box-shadow 0.1s ease-in-out;
     transition: background 0.1s ease-in-out;
 
 
 }
 
-#connectspot:hover {
-    cursor: pointer;
-    box-shadow: 0px 2px 5px black;
+#connectspotButton:hover {
     background:lightgreen;
 }
 
-#connectspot:active {
+#connectspotButton:active {
     background:green;
     margin-top:2px;
     margin-bottom:-2px;
 }
+
+#webcamButton {
+    background:silver;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #step2 {
     visibility: hidden;
