--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -63,15 +63,20 @@ body {
     box-shadow: 0px 2px 5px black;
 }
 
+.roundButton:active {
+    margin-top:2px;
+    margin-bottom:-2px;
+    background:var(--activeBg);
+}
+
 
 
 
 #connectspotButton {
-
+    --activeBg: yellow;
     background:#1ED760;
 
-    transition: box-shadow 0.1s ease-in-out;
-    transition: background 0.1s ease-in-out;
+
 
 
 }
@@ -82,8 +87,7 @@ body {
 
 #connectspotButton:active {
     background:green;
-    margin-top:2px;
-    margin-bottom:-2px;
+   
 }
 
 #webcamButton {
