--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -48,8 +48,9 @@ body {
 }
 
 
-.roundButton {
-    border-radius:30px;
+
+button {
+  
     padding:10px;
     font-size:25px;
     transition: box-shadow 0.2s ease-in-out;
@@ -58,14 +59,18 @@ body {
     border:2px solid black;
 
 }
-.roundButton:hover {
+button {
     cursor: pointer;
     box-shadow: 0px 1px 3px black;
 }
-.roundButton:active {
+button:active {
     margin-top:2px;
     margin-bottom:-2px;
     
+}
+
+.roundButton {
+    border-radius:30px;
 }
 
 
