--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -49,8 +49,8 @@ body {
 
 
 
-button {
-  
+.roundButton {
+    border-radius:30px;
     padding:10px;
     font-size:25px;
     transition: box-shadow 0.2s ease-in-out;
@@ -59,18 +59,14 @@ button {
     border:2px solid black;
 
 }
-button {
+.roundButton:hover {
     cursor: pointer;
     box-shadow: 0px 1px 3px black;
 }
-button:active {
+.roundButton:active {
     margin-top:2px;
     margin-bottom:-2px;
     
-}
-
-.roundButton {
-    border-radius:30px;
 }
 
 
