--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -23,6 +23,25 @@ body {
     margin:10px;
 }
 
+
+
+
+#intro {
+    min-height: 100vh;
+    background-image:url("musik.png");
+}
+
+
+
+
+
+
+
+
+
+
+
+
 #videoElement {
 	width:100%;
     height:100%;
