--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -29,6 +29,8 @@ body {
 #intro {
     min-height: 100vh;
     background-image:url("musik.png");
+    background-size:cover;
+    box-shadow: inset 0 0 0 2000px rgba(255, 0, 150, 0.3);
 }
 
 
