--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -7,8 +7,10 @@
 
 body {
     font-family: jakartaSans;
-    padding-left:60px;
-    padding-right:60px;
+   /* padding-left:60px;
+    padding-right:60px; */
+    margin: 0;
+
 }
 
 #header h1 {
@@ -21,17 +23,26 @@ body {
     border-radius: 12px;
     padding:10px;
     margin:10px;
+    display:none;
 }
 
 
 
 
 #intro {
-    min-height: 100vh;
+    height: 80vh;
     background-image:url("musik.png");
     background-size:cover;
-    box-shadow: inset 0 0 0 2000px rgba(255, 0, 150, 0.3);
+    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8);
+    color:white;
+    padding:100px;
+    overflow:scroll;
 }
+
+#intro .introTextDiv:not(:first-child) {
+
+}
+
 
 
 
