--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -10,8 +10,15 @@ body {
    /* padding-left:60px;
     padding-right:60px; */
     margin: 0;
-
+    overflow:auto;
+   height:100%; 
 }
+html {
+    overflow: hidden;
+    height: 100%;
+}
+
+
 
 #header h1 {
     font-size:64px;
@@ -33,16 +40,27 @@ body {
     height: 80vh;
     background-image:url("musik.png");
     background-size:cover;
-    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8);
+    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
     color:white;
     padding:100px;
     overflow:scroll;
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none; 
+}
+
+#intro::-webkit-scrollbar {
+  display: none;
 }
 
 #intro .introTextDiv:not(:first-child) {
-
+    width:60%;
 }
 
+
+#postIntro {
+    height:80vh;
+}
 
 
 
