--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -16,6 +16,7 @@ body {
 html {
     overflow: hidden;
     height: 100%;
+    background:black;
 }
 
 
@@ -40,7 +41,7 @@ html {
     height: 80vh;
     background-image:url("musik.png");
     background-size:cover;
-    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
+    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.68);
     color:white;
     padding:100px;
     overflow:scroll;
@@ -53,14 +54,16 @@ html {
   display: none;
 }
 
-#intro .introTextDiv:not(:first-child) {
-    width:60%;
+#intro .introTextDiv {
+    width:63%;
 }
 
 
 #postIntro {
     height:80vh;
+    background:white;
 }
+
 
 
 
@@ -154,7 +157,10 @@ html {
 
 
 
-
+#step1 {
+    text-align:center;
+    padding:30px;
+}
 
 
 
