--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -190,9 +190,11 @@ html {
 
 .songrec {
     display:inline-block;
-    width:200px;
+    width:175px;
     background:silver;
     border:2px solid black;
     max-height:300px;
     min-height:300px;
+    margin:25px;
+
 }
