--- a/facemusic/index.css
+++ b/facemusic/index.css
@@ -172,6 +172,8 @@ html {
 #step2 {
     visibility: hidden;
     text-align:center;
+    margin-left:100px;
+    margin-right:100px;
 }
 
 #step2point1 {
