--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -80,3 +80,14 @@ html {
     text-align:center;
     padding:30px;
 }
+
+
+
+/* react_step2.js */
+
+#step2 {
+    visibility: hidden;
+    text-align:center;
+    margin-left:100px;
+    margin-right:100px;
+}
