--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -98,3 +98,59 @@ html {
    vertical-align:middle;
    width:30px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#videoPlusSnapButton {
+    display:inline-block;
+}
+
+
+
+
+
+
+
+
+
+
+
+#videoElement {
+	width:100%;
+    height:100%;
+	background-color: #666;
+    transform: scaleX(-1);
+}
+
+#canvas {
+    
+    width:500px;
+    height:375px;
+
+}
+
+#videoContainer {
+    width: 500px;
+	height: 375px;
+}
+
+#snappicButton {
+    background:silver;
+    border:1px solid black;
+    width:500px;
+    text-align:center;
+}
