--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -191,8 +191,12 @@ html {
 
     white-space: nowrap;
     overflow: hidden;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
 
+}
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
 }
 
 
