--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -180,24 +180,26 @@ html {
     margin:10px;
 
 
-    display: inline-block;
-    padding-left: 10%;
-    animation: marquee 10s linear infinite;
+    margin-right: 10px; /* Adjust margin between tiles as needed */
+    animation: scrollTiles 10s linear infinite;
 
 }
 
 
 #marquee {
 
-    white-space: nowrap;
     overflow: hidden;
-    box-sizing: border-box;
+    white-space: nowrap;
 
 }
-@keyframes marquee {
-    0%   { transform: translate(0, 0); }
-    100% { transform: translate(-100%, 0); }
-}
+@keyframes scrollTiles {
+    0% {
+        transform: translateX(0);
+      }
+      100% {
+        transform: translateX(calc(-100% - 10px)); /* Adjust for margin-right */
+      }
+  }
 
 
 
