--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -52,7 +52,7 @@ html {
 /* react_intro.js */
 
 #intro {
-    height: 80vh;
+    height: 100vh;
     background-image:url("musik.png");
     background-size:cover;
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.68);
@@ -62,6 +62,7 @@ html {
 
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none; 
+    box-sizing: border-box;
 }
 
 #intro::-webkit-scrollbar {
