--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -211,3 +211,13 @@ html {
     /* display:block; */
     margin-top:30px;
 }
+
+#logoutDiv {
+    position: fixed;
+  width: 50%;
+  height: 100px;
+  margin-left: -25%;
+  background: #063;
+  bottom: 0px;
+  left: 50%;
+}
