--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -143,8 +143,12 @@ html {
 
 }
 #howyourelooking {
-    height:25px;
+    height:50px;
     font-size:25px;
+}
+
+#howyourelooking p {
+    margin:0
 }
 
 
