--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -134,6 +134,11 @@ html {
     border:1px solid black;
     width:500px;
     text-align:center;
+
+    border-top-left-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+    font-size: 15px !important;
+    padding:0 !important;
 }
 
 
