--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -138,7 +138,7 @@ html {
     border:1px solid black;
     width:500px;
     text-align:center;
-
+border-radius:15px;
     border-top-left-radius: 0 !important;
     border-top-right-radius: 0 !important;
     font-size: 15px !important;
