--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -23,6 +23,7 @@ html {
     background:#c2f2d2;
     min-height:100vh;
     padding-top:25px;
+    padding-bottom:10px;
     box-sizing: border-box;
 
 
