--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -187,6 +187,7 @@ border-radius:15px;
     position:relative;
     height:250px;
     overflow:hidden;
+    margin-bottom:25px;
 
 }
 @keyframes scrollTiles {
