--- a/facemusic/react_main.css
+++ b/facemusic/react_main.css
@@ -62,7 +62,7 @@ html {
 
 #intro {
     height: 100vh;
-    background-image:url("musik.png");
+    background-image:url("assets/musik.png");
     background-size:cover;
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.65);
     color:white;
